demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris
spec:
  selector:
    app: tetris
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
